--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/stantheman227/CP_Proxy#readme",
   "dependencies": {
-    "express": "^4.21.1",
-    "js-captcha": "^1.3.0"
+    "express": "^4.21.1"
   }
 }
